# python-ci

./: .coverage  README.md  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
tests/: test_init.py
