[project]
name = "python-ci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "namesjc", email = "adiachan@outlook.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
python-ci = "python_ci:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
